# test-bootcamp

./: .coveragerc  .gitignore  README.md  check.bat  checknotest.bat  manage.py  pyproject.toml
.artifacts/coverage/: data_file.db
.github/workflows/: check.yml
app_booklist/: apps.py  models.py  urls.py  views.py
app_booklist/migrations/: 0001_initial.py
app_booklist/views/: __init__.py  helpers.py  views.py
booklist/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test.py
